@@ -39,13 +39,13 @@ NextScreen=ScreenSelectStyle
 
 [ScreenEz2SelectPlayer]
 CursorP1X=120
-CursorP1Y=360
+CursorP1Y=280
 CursorP2X=520
-CursorP2Y=360
+CursorP2Y=280
 ControllerP1X=120
-ControllerP1Y=380
+ControllerP1Y=280
 ControllerP2X=520
-ControllerP2Y=380
+ControllerP2Y=280
 HelpText=Press $ on the pad you wish to play on
 TimerSeconds=40
 NextScreen=ScreenSelectGroup
